finish function's looping mechanism to create result array

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1 class="jumbotron">Beep Boop</h1>
-    <form class="" action="index.html" method="post">
+    <form class="theForm" action="index.html" method="post">
     <div class="container">
       <div class="row">
 
@@ -19,7 +19,7 @@
         </div>
         <div class="col-md-6">
           <label for="input">Write your number in the box below!</label>
-          <input id="inputNumber" type="text" name="inputNumber" value="number">
+          <input id="inputNumber" type="text" name="inputNumber">
 
         </div>
 
@@ -27,5 +27,8 @@
       <button type="submit" name="button">Submit your number!</button>
     </div>
     </form>
+    <div class="container">
+      <p id="printResult"></p>
+    </div>
   </body>
 </html>
